--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.pedsf</groupId>
    <artifactId>multi-module-library</artifactId>
-   <version>1.0.0-SNAPSHOT</version>
+   <version>1.0.0.RELEASE</version>
    <packaging>pom</packaging>
    <name>multi-module-library</name>
    <description>
