--- a/web/pom.xml
+++ b/web/pom.xml
@@ -14,7 +14,7 @@
 	<parent>
 		<groupId>com.pedsf</groupId>
 		<artifactId>multi-module-library</artifactId>
-		<version>1.0.0-SNAPSHOT</version>
+		<version>1.0.0.RELEASE</version>
 		<relativePath>..</relativePath>
 	</parent>
 
