Change application to manage several media with the same EAN Media contain all medias in the library. Book, Game, Music, Video contain the description of media by EAN

--- a/config-server/pom.xml
+++ b/config-server/pom.xml
@@ -104,6 +104,12 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<resources>
+			<resource>
+				<targetPath>/properties-repository</targetPath>
+				<directory>${project.basedir}/properties-repository/</directory>
+			</resource>
+		</resources>
 	</build>
 
 </project>
