--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -22,14 +22,14 @@ spring.security.user.password=ENC(lV1GL/hRyIdH3T9obW4YmntwBQZkxzUaidgOPjTukKI=)
 #management.security.enabled=false
 
 # Local repository
-#spring.profiles.active=native
-#spring.cloud.config.server.native.searchLocations=./properties-repository
+spring.profiles.active=native
+spring.cloud.config.server.native.searchLocations=config-server/target/classes/properties-repository
 
 # Git repository location
-spring.cloud.config.server.git.uri = https://github.com/pedsf1968/properties-repository.git
+#spring.cloud.config.server.git.uri = https://github.com/pedsf1968/properties-repository.git
 
 #Verify any repository issue in service startup
-spring.cloud.config.server.git.clone-on-start=true
+#spring.cloud.config.server.git.clone-on-start=true
 
 
 
