--- a/web/pom.xml
+++ b/web/pom.xml
@@ -194,6 +194,12 @@
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
 		</dependency>
+      <dependency>
+         <groupId>com.pedsf</groupId>
+         <artifactId>library-api</artifactId>
+         <version>1.0.0.RELEASE</version>
+         <scope>compile</scope>
+      </dependency>
    </dependencies>
 
 	<!-- ==================================================================== -->
