--- a/batch/src/main/resources/bootstrap.properties
+++ b/batch/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
 ######################################################################### SPRING
+server.port=2300
 spring.application.name=batch
 spring.profiles.active=@activatedProperties@
 
