add sonar in travis.yml

--- a/library-api/pom.xml
+++ b/library-api/pom.xml
@@ -53,6 +53,7 @@
 		<dependency>
 			<groupId>${project.groupId}</groupId>
 			<artifactId>user-api</artifactId>
+			<version>${project.version}</version>
 		</dependency>
 
 
