--- a/.travis.yml
+++ b/.travis.yml
@@ -5,15 +5,15 @@ dist: trusty
 # use Java 8
 jdk: openjdk8
 
-script: ./mvnw -DskipTests=true -Dmaven.test.skip=true clean install
-
 before_install:
   - chmod +x mvnw
 
 jobs:
   include:
-    - stage: Install
-      script: ./mvnw -DskipTests=true -Dmaven.test.skip=true clean install
+    - stage: test
+      script: ./mvnw clean test
+    - stage: sonar
+      script: ./mvnw clean verify sonar:sonar
 
 cache:
   directories:
