--- a/user-api/pom.xml
+++ b/user-api/pom.xml
@@ -43,6 +43,7 @@
 	<!-- ==================================================================== -->
 	<properties>
 		<java.version>1.8</java.version>
+		<spring-boot.repackage.skip>true</spring-boot.repackage.skip>
 	</properties>
 
 	<!-- ==================================================================== -->
