--- a/user-api/src/test/resources/bootstrap.properties
+++ b/user-api/src/test/resources/bootstrap.properties
@@ -8,7 +8,7 @@ spring.profiles.active=test
 
 spring.main.allow-bean-definition-overriding=true
 
-#jasypt
+######################################################################### JASYPT
 jasypt.encryptor.algorithm=PBEWithMD5AndDES
 jasypt.encryptor.keyObtentionIterations=1000
 jasypt.encryptor.poolSize=1
