--- a/library-api/src/test/resources/bootstrap.properties
+++ b/library-api/src/test/resources/bootstrap.properties
@@ -1,8 +1,13 @@
 ######################################################################### SPRING
 spring.application.name=library-api
 spring.cloud.config.enabled=false
+spring.cloud.discovery.enabled = false
+spring.cloud.config.discovery.enabled = false
+
+spring.profiles.active=test
 
 spring.main.allow-bean-definition-overriding=true
+
 
 ######################################################################### JASYPT
 jasypt.encryptor.password=${JASYPT_ENCRYPTOR_SECRET}
@@ -11,3 +16,10 @@ jasypt.encryptor.keyObtentionIterations=1000
 jasypt.encryptor.poolSize=1
 jasypt.encryptor.saltGeneratorClassname=org.jasypt.salt.RandomSaltGenerator
 jasypt.encryptor.stringOutputType=base64
+
+# Disabling the /v3/api-docs enpoint
+springdoc.api-docs.enabled=false
+
+# Disabling the swagger-ui
+springdoc.swagger-ui.enabled=false
+
