starting library test

--- a/user-api/src/test/resources/application.properties
+++ b/user-api/src/test/resources/application.properties
@@ -20,6 +20,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=false
+spring.datasource.data=classpath:user.sql
 
 
 ########################################################################## DEBUG
