add somes test in library

--- a/library-api/src/test/resources/application.properties
+++ b/library-api/src/test/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=false
-spring.datasource.data=classpath:library.sql
+spring.datasource.data=classpath:librarydata.sql
 
 
 #library.user.path=http://localhost:6000/
