add unitary test for BookService

--- a/pom.xml
+++ b/pom.xml
@@ -666,6 +666,43 @@
       <!--                                                           PLUGINS -->
       <!-- ================================================================= -->
       <plugins>
+         <!-- ===================================================== SUREFIRE -->
+         <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId> <!-- surefire plugin version managed by Spring Boot -->
+            <configuration>
+               <skipTests>true</skipTests>
+            </configuration>
+            <executions>
+               <execution>
+                  <id>unitary-tests</id>
+                  <phase>test</phase>
+                  <goals>
+                     <goal>test</goal>
+                  </goals>
+                  <configuration>
+                     <skipTests>false</skipTests>
+                     <includes>
+                        <include>**/*Test.java</include>
+                     </includes>
+                  </configuration>
+               </execution>
+               <execution>
+                  <id>integration-tests</id>
+                  <phase>integration-test</phase>
+                  <goals>
+                     <goal>test</goal>
+                  </goals>
+                  <configuration>
+                     <skipTests>false</skipTests>
+                     <includes>
+                        <include>**/*IT.*</include>
+                        <include>**/*Test.*</include>
+                     </includes>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
          <!-- ==================================================== Jacoco -->
          <plugin>
             <groupId>org.jacoco</groupId>
