--- a/library-api/pom.xml
+++ b/library-api/pom.xml
@@ -333,7 +333,7 @@
 							<skipTests>false</skipTests>
 							<includes>
 								<include>**/*IT.*</include>
-								<include>**/*Tests.*</include>
+								<include>**/*Test.*</include>
 							</includes>
 						</configuration>
 					</execution>
