--- a/user-api/src/test/resources/application.properties
+++ b/user-api/src/test/resources/application.properties
@@ -7,7 +7,12 @@
 spring.main.allow-bean-definition-overriding=true
 
 ##################################################################### SPRING JPA
-spring.jpa.show-sql=true
+### to enable
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=false
+### to make the printing SQL beautify
+spring.jpa.properties.hibernate.format_sql=false
+
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = create
 
@@ -21,7 +26,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.h2.console.enabled=false
 spring.datasource.data=classpath:userdata.sql
-
 
 ########################################################################## DEBUG
 #logging.level.org.hibernate: DEBUG
