--- a/library-api/src/test/resources/application.properties
+++ b/library-api/src/test/resources/application.properties
@@ -2,7 +2,12 @@
 spring.main.allow-bean-definition-overriding=true
 
 ##################################################################### SPRING JPA
-spring.jpa.show-sql=true
+### to enable
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=false
+### to make the printing SQL beautify
+spring.jpa.properties.hibernate.format_sql=false
+
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = create
 
