--- a/library-api/src/test/resources/application.properties
+++ b/library-api/src/test/resources/application.properties
@@ -2,7 +2,8 @@
 spring.main.allow-bean-definition-overriding=true
 
 ##################################################################### SPRING JPA
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.jpa.show_sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = create
 
