--- a/user-api/src/test/resources/application.properties
+++ b/user-api/src/test/resources/application.properties
@@ -7,9 +7,11 @@
 spring.main.allow-bean-definition-overriding=true
 
 ##################################################################### SPRING JPA
-spring.jpa.show-sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=false
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = create
+logging.level.org.hibernate.SQL=ERROR
 
 ############################################################## SPRING DATASOURCE
 spring.datasource.hikari.connectionTimeout=20000
