--- a/library-api/src/test/resources/application.properties
+++ b/library-api/src/test/resources/application.properties
@@ -3,10 +3,10 @@ spring.main.allow-bean-definition-overriding=true
 
 ##################################################################### SPRING JPA
 ### to enable
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.show_sql=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.show_sql=true
 ### to make the printing SQL beautify
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.properties.hibernate.format_sql=true
 
 spring.jpa.generate-ddl=true
 spring.jpa.hibernate.ddl-auto = create
@@ -19,7 +19,7 @@ spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=- 1;DB_CLOSE_ON_EXIT=FAL
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-spring.h2.console.enabled=false
+spring.h2.console.enabled=true
 spring.datasource.data=classpath:librarydata.sql
 
 
