--- a/pom.xml
+++ b/pom.xml
@@ -98,16 +98,16 @@
       <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
       <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml,../target/site/jacoco-aggregate/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
       <sonar.coverage.exclusions>
-         **/configuration/**/*.java
-         **/dto/**/*.java
-         **/exception/**/*.java
-         **/model/**/*.java
-         **/repository/**/*.java
-         config-server/src/main/java/com/pedsf/library/configserver/*.java
-         eureka-server/src/main/java/com/pedsf/library/eurekaserver/*.java
-         zuul-server/src/main/java/com/pedsf/library/zuulserver/*.java
-         data-model/src/mail/java/com/pedsf/library/*.java
-         user-api/src/main/java/com/pedsf/library/userapi/UserApiApplication.java
+         **/configuration/**/*.java,
+         **/dto/**/*.java,
+         **/exception/**/*.java,
+         **/model/**/*.java,
+         **/repository/**/*.java,
+         config-server/src/main/java/com/pedsf/library/configserver/*.java,
+         eureka-server/src/main/java/com/pedsf/library/eurekaserver/*.java,
+         zuul-server/src/main/java/com/pedsf/library/zuulserver/*.java,
+         data-model/src/mail/java/com/pedsf/library/*.java,
+         user-api/src/main/java/com/pedsf/library/userapi/UserApiApplication.java,
       </sonar.coverage.exclusions>
    </properties>
 
