--- a/library-api/src/test/resources/application.properties
+++ b/library-api/src/test/resources/application.properties
@@ -3,8 +3,8 @@ spring.main.allow-bean-definition-overriding=true
 
 ##################################################################### SPRING JPA
 ### to enable
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.show_sql=false
 ### to make the printing SQL beautify
 spring.jpa.properties.hibernate.format_sql=false
 
@@ -34,6 +34,9 @@ library.borrowing.extention.max=5
 
 # Delay in days of borrowing
 library.borrowing.delay=14
+
+# Delay in days of booking
+library.booking.delay=2
 
 ########################################################################## DEBUG
 #logging.level.org.hibernate: DEBUG
