--- a/web-api/pom.xml
+++ b/web-api/pom.xml
@@ -8,7 +8,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.pedsf.library</groupId>
-		<artifactId>Library</artifactId>
+		<artifactId>library</artifactId>
 		<version>1.0.0.RELEASE</version>
 		<relativePath>../pom.xml</relativePath>
 	</parent>
