add output redirect to log file in travis

--- a/batch/src/test/resources/application.properties
+++ b/batch/src/test/resources/application.properties
@@ -34,3 +34,6 @@ spring.kafka.producer.key-serializer=org.apache.kafka.common.serialization.Strin
 spring.kafka.producer.value-serializer=org.springframework.kafka.support.serializer.JsonDeserializer
 spring.kafka.consumer.properties.spring.json.trusted.packages=com.library.batch
 
+########################################################################## DEBUG
+logging.level.root=ERROR
+logging.level.com.pedsf.library=ERROR
