--- a/mail-api/src/test/resources/application.properties
+++ b/mail-api/src/test/resources/application.properties
@@ -45,3 +45,6 @@ springdoc.api-docs.enabled=false
 # Disabling the swagger-ui
 springdoc.swagger-ui.enabled=false
 
+########################################################################## DEBUG
+logging.level.root=ERROR
+logging.level.com.pedsf.library=ERROR
