--- a/media-api/src/test/resources/application.properties
+++ b/media-api/src/test/resources/application.properties
@@ -19,3 +19,7 @@ media-api.music.images.repository=/images/music/
 media-api.video.images.repository=/images/video/
 media-api.game.images.repository=/images/game/
 media-api.user.images.repository=/images/user/
+
+########################################################################## DEBUG
+logging.level.root=ERROR
+logging.level.com.pedsf.library=ERROR
