--- a/user-api/src/test/resources/application.properties
+++ b/user-api/src/test/resources/application.properties
@@ -28,4 +28,6 @@ spring.h2.console.enabled=false
 spring.datasource.data=classpath:userdata.sql
 
 ########################################################################## DEBUG
-#logging.level.org.hibernate: DEBUG
+#logging.level.org.hibernate: ERROR
+logging.level.root=ERROR
+logging.level.com.pedsf.library=ERROR
