--- a/web-api/src/test/resources/application.properties
+++ b/web-api/src/test/resources/application.properties
@@ -18,6 +18,9 @@ eureka.client.serviceUrl.defaultZone: http://localhost:2100/eureka/
 ############################################################################ ZUUL
 zuul.url: http://localhost:2200/
 
+########################################################################## DEBUG
+logging.level.root=ERROR
+logging.level.com.pedsf.library=ERROR
 
 
 
