--- a/library-api/src/test/resources/application.properties
+++ b/library-api/src/test/resources/application.properties
@@ -39,4 +39,6 @@ library.borrowing.delay=14
 library.booking.delay=2
 
 ########################################################################## DEBUG
-#logging.level.org.hibernate: DEBUG
+#logging.level.org.hibernate: ERROR
+logging.level.root=ERROR
+logging.level.com.pedsf.library=ERROR
