bug dans le controller de web-api

--- a/web-api/src/test/resources/application.properties
+++ b/web-api/src/test/resources/application.properties
@@ -19,8 +19,8 @@ eureka.client.serviceUrl.defaultZone: http://localhost:2100/eureka/
 zuul.url: http://localhost:2200/
 
 ########################################################################## DEBUG
-logging.level.root=ERROR
-logging.level.com.pedsf.library=ERROR
-
+#logging.level.root=ERROR
+#logging.level.com.pedsf.library=ERROR
+logging.level.root=INFO
 
 
