--- a/batch/src/test/resources/application.properties
+++ b/batch/src/test/resources/application.properties
@@ -10,14 +10,19 @@
 # batch.cron.expression=0 0 1 * * *
 library.batch.cron.expression=0 0 1 * * *
 
+
 # Request path to get borrowing list
 library.batch.request.endpoint=http://localhost:7000/borrowings/delayed/
 
 # Retry delay to execute request
 library.batch.retry.delay=0
 
-library.mail.subject=Borrowing limit exceeded
-library.mail.content=Media return date has passed for the media : %s \n with the title : %s \n identified by : %s \n that you borrow the %s \n thank you for reporting it as soon as possible.
+library.mail.borrowing.subject=Borrowing limit exceeded
+library.mail.borrowing.content=Media return date has passed for the media : %s \n with the title : %s \n identified by : %s \n that you borrow the %s \n thank you for reporting it as soon as possible.
+
+library.mail.booking.subject=Media is return
+library.mail.booking.content=The media %s is available\n with the title : %s \n identified by : %s \n that you booked the %s \n thank you for pickup it as soon as possible.
+
 library.mail.noReply=no-reply@lagrandelibrairie.com
 
 ################################################################### SPRING KAFKA
