--- a/batch/src/test/resources/application.properties
+++ b/batch/src/test/resources/application.properties
@@ -14,8 +14,11 @@ library.batch.cron.expression=0 0 1 * * *
 # Request path to get borrowing list
 library.batch.request.endpoint=http://localhost:7000/borrowings/delayed/
 
+# Request path to get booking list
+library.batch.request.booking.endpoint=http://localhost:2200/library-api/bookings/pickup/
+
 # Retry delay to execute request
-library.batch.retry.delay=0
+library.batch.retry.delay=60
 
 library.mail.borrowing.subject=Borrowing limit exceeded
 library.mail.borrowing.content=Media return date has passed for the media : %s \n with the title : %s \n identified by : %s \n that you borrow the %s \n thank you for reporting it as soon as possible.
