--- a/mail-api/src/test/resources/bootstrap.properties
+++ b/mail-api/src/test/resources/bootstrap.properties
@@ -1,12 +1,15 @@
 spring.application.name=mail-api
 
 spring.cloud.config.enabled=false
+spring.cloud.discovery.enabled = false
+spring.cloud.config.discovery.enabled = false
 
-spring.profiles.active=development
+
+spring.profiles.active=test
 
 spring.main.allow-bean-definition-overriding=true
 
-#jasypt properties
+######################################################################### JASYPT
 jasypt.encryptor.password=${JASYPT_ENCRYPTOR_SECRET}
 jasypt.encryptor.algorithm=PBEWithMD5AndDES
 jasypt.encryptor.keyObtentionIterations=1000
