--- a/media-api/src/test/resources/application.properties
+++ b/media-api/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=media-api
 
-spring.profiles.active=development
+spring.profiles.active=test
 
 #tomcat port
 server.port=9092
@@ -13,12 +13,12 @@ spring.servlet.multipart.location=/TMP/
 
 #Application repository
 media-api.upload.tmp=/TMP/
-media-api.images.repository=/images/
-media-api.book.images.repository=/images/book/
-media-api.music.images.repository=/images/music/
-media-api.video.images.repository=/images/video/
-media-api.game.images.repository=/images/game/
-media-api.user.images.repository=/images/user/
+media-api.images.repository=src/main/resources/images/
+media-api.book.images.repository=src/main/resources/images/book/
+media-api.music.images.repository=src/main/resources/images/music/
+media-api.video.images.repository=src/main/resources/images/video/
+media-api.game.images.repository=src/main/resources/images/game/
+media-api.user.images.repository=src/main/resources/images/user/
 
 ########################################################################## DEBUG
 logging.level.root=ERROR
