--- a/mail-api/src/test/resources/test.properties
+++ b/mail-api/src/test/resources/test.properties
@@ -3,9 +3,14 @@ spring.application.name=mail-api
 #tomcat port
 server.port 5000
 
+spring.cloud.config.enabled=false
+spring.cloud.discovery.enabled = false
+spring.cloud.config.discovery.enabled = false
+
+spring.profiles.active=test
+
 jasypt.encryptor.password=fakepassword
 
-spring.cloud.config.enabled=false
 #Spring Kafka properties
 spring.kafka.username=fakeusername
 spring.kafka.password=fakepassword
